# rus_engineers_app

./: .gitignore  Doxyfile  README.md  app.py  config.py  data.sqlite  generate_erd.py  manage.py  pyproject.toml  requirements.txt  run.py  setup.cfg  some.py
app/: __init__.py  config.py  decorators.py  email.py  errors.py  filters.py  logger.py  models.py  utils.py
app/auth/: __init__.py  forms.py  views.py
app/main/: __init__.py  errors.py  forms.py  views.py
app/services/: users.py
app/templates/: 404.html  500.html  _comments.html  _pagination.html  _posts.html  base.html  edit_profile.html  error.html  feed.html  followers_or_subscriptions.html  index.html  logs.html  moderate.html  post_details.html  post_edit.html  profile.html  user.html
docs/: generate_erd.py  project_structure.txt
docs/html/: ____init_____8py.html  ____init_____8py.js  annotated.html  annotated_dup.js  auth_2____init_____8py.html  auth_2____init_____8py.js  auth_2forms_8py.html  auth_2forms_8py.js  auth_2views_8py.html  auth_2views_8py.js  classapp_1_1auth_1_1forms_1_1_login_form-members.html  classapp_1_1auth_1_1forms_1_1_login_form.html  classapp_1_1auth_1_1forms_1_1_login_form__coll__graph.map  classapp_1_1auth_1_1forms_1_1_login_form__coll__graph.md5  classapp_1_1auth_1_1forms_1_1_registration_form-members.html  classapp_1_1auth_1_1forms_1_1_registration_form.html  classapp_1_1auth_1_1forms_1_1_registration_form.js  classapp_1_1auth_1_1forms_1_1_registration_form__coll__graph.map  classapp_1_1auth_1_1forms_1_1_registration_form__inherit__graph.md5  classapp_1_1config_1_1_config-members.html  classapp_1_1config_1_1_config.html  classapp_1_1config_1_1_config__coll__graph.map  classapp_1_1config_1_1_config__coll__graph.md5  classapp_1_1config_1_1_config__inherit__graph.map  classapp_1_1config_1_1_config__inherit__graph.md5  classapp_1_1config_1_1_development_config-members.html  classapp_1_1config_1_1_development_config.html  classapp_1_1config_1_1_development_config__coll__graph.map  classapp_1_1config_1_1_development_config__coll__graph.md5  classapp_1_1config_1_1_testing_config-members.html  classapp_1_1config_1_1_testing_config.html  classapp_1_1config_1_1_testing_config__coll__graph.map  classapp_1_1config_1_1_testing_config__coll__graph.md5  classapp_1_1main_1_1forms_1_1_name_form-members.html  (+86 more)
scripts/: generate_erd.py  generate_erd__schemadisplay.py  generate_erd_eralchemy.py
templates/: user.html
tests/: test_email.py  test_user_model.py
(+78 files in other folders)
