[tool.poetry]
name = "app"
version = "0.1.0"
description = "Приложение Russian Engineers на Flask"
authors = ["Andrey Solomatin <aisolomatin@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
alembic = "1.14.0"
blinker = "1.8.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.7"
dnspython = "2.6.1"
email-validator = "2.2.0"
flask = "3.0.3"
flask-bootstrap = "3.3.7.1"
flask-login = "0.6.3"
flask-mail = "0.10.0"
flask-migrate = "4.0.7"
flask-moment = "1.0.6"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.1"
greenlet = "3.1.1"
idna = "3.10"
importlib-metadata = "8.5.0"
importlib-resources = "6.4.5"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
mistune = "^3.1.3"
packaging = "24.2"
platformdirs = "4.3.6"
pluggy = "1.5.0"
pygments = "2.19.1"
pygraphviz = "1.11"
pytz = "2025.1"
requests = "2.32.3"
soupsieve = "2.6"
sqlalchemy = "2.0.36"
stdlib-list = "0.10.0"
tomlkit = "0.13.2"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
werkzeug = "3.0.6"
wtforms = "3.1.2"
zipp = "3.20.2"

[tool.poetry.group.dev.dependencies]
accessible-pygments = "0.0.4"
alabaster = "0.7.13"
astroid = "3.2.4"
babel = "2.17.0"
beautifulsoup4 = "4.13.1"
black = "^25.1.0"
coverage = "7.6.1"
css-html-js-minify = "2.5.5"
dill = "0.3.9"
docutils = "0.19"
dominate = "2.9.1"
eralchemy = "1.5.0"
exceptiongroup = "1.2.2"
faker = "^37.1.0"
flask-debugtoolbar = "0.16.0"
furo = "2024.8.6"
imagesize = "1.4.1"
isort = "5.13.2"
lxml = "5.3.0"
mako = "1.3.8"
mccabe = "0.7.0"
piccolo-theme = "0.24.0"
pydata-sphinx-theme = "0.14.4"
pydeps = "3.0.1"
pylint = "3.2.7"
pytest = "8.3.5"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
python-docs-theme = "2024.6"
python-dotenv = "1.0.1"
python-slugify = "8.0.4"
snowballstemmer = "2.2.0"
sphinx = "7.1.2"
sphinx-autodoc-typehints = "2.0.1"
sphinx-basic-ng = "1.0.0b2"
sphinx-material = "0.0.36"
sphinx-press-theme = "0.9.1"
sphinx-rtd-theme = "3.0.2"
sphinxcontrib-applehelp = "1.0.4"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "2.0.1"
sphinxcontrib-jquery = "4.1"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.5"
text-unidecode = "1.3"
tomli = "2.2.1"
unidecode = "1.3.8"
visitor = "0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:create_app" 
